# SuperKMeans

./: .gitignore  .gitmodules  CMakeLists.txt  GPU.md  INSTALL.md  README.md  f32_benchmark_output.txt  f32_xnnpack_benchmark_output.txt  i8_xnnpack_10_knn_rescore_benchmark_output.txt  i8_xnnpack_benchmark_output.txt  pyproject.toml
.cache/clangd/index/: 1-Flat.cpp.C8C7BFE125B420C3.idx  2-IVFFlat.cpp.6576ABBA05B02974.idx  3-IVFPQ.cpp.A47DE9E04978B30C.idx  4-GPU.cpp.C76783856891864A.idx  5-Multiple-GPUs.cpp.E9BC5C905AB53B87.idx  6-HNSW.cpp.A46E5BF096702F83.idx  7-PQFastScan.cpp.3D4B89A9452ECF24.idx  8-PQFastScanRefine.cpp.8F177AF698C6850A.idx  9-RefineComparison.cpp.E036D0F2F6DF7986.idx  AdditiveQuantizer.cpp.BCFBB6C2EFF46840.idx  AdditiveQuantizer.h.5399B8CFBF1E7D59.idx  AlignedBox.h.7B0F7F74FDE834E2.idx  AlignedTable.h.D78AEB318C2EF857.idx  AmbiVector.h.322CE836FF101607.idx  Amd.h.1CE4573A9248A65A.idx  AngleAxis.h.177BC5E43D07CF57.idx  ArithmeticSequence.h.AC178C0947CF1989.idx  Array.h.C19A6D5FF149C391.idx  ArrayBase.h.210C6599117D2FBB.idx  ArrayCwiseBinaryOps.inc.FCCC71B63B5DAF1F.idx  ArrayCwiseUnaryOps.inc.EC3E0738F909C67B.idx  ArrayWrapper.h.4C27A88C3963E43B.idx  Assert.h.B5B1C96CBDE56439.idx  Assign.h.97A8A1F9DC8CB30A.idx  AssignEvaluator.h.35CB9F21EA2AE37E.idx  AssignmentFunctors.h.AF05AD101E9C7F28.idx  AutoTune.cpp.1BBE437D8146D2FE.idx  AutoTune.h.F4714860865B8CCD.idx  AuxIndexStructures.cpp.49935CEA31C43762.idx  AuxIndexStructures.h.ECCF97F106263BD8.idx  BDCSVD.h.4932B6A7A18F2068.idx  BFloat16.h.8C873D4D34EE3916.idx  BandMatrix.h.7D2B4B3EC09E4935.idx  BasicPreconditioners.h.E30F600F9CB44FE0.idx  BiCGSTAB.h.AECBEB6D7EDEEDDC.idx  BinaryFunctors.h.5CA63298DCBB627B.idx  BlasUtil.h.56CB56E5FC62EA36.idx  Block.h.51AEC426AB984A2A.idx  BlockHouseholder.h.5F1890A87B08BFB3.idx  BlockInvertedLists.cpp.A0BC32D7D75C9AF3.idx  (+596 more)
.github/workflows/: publish.yml
benchmarks/: CMakeLists.txt  accelerators.sh  ad_hoc_assign.cpp  ad_hoc_assign_quantized.cpp  ad_hoc_hierarchical_superkmeans.cpp  ad_hoc_id_estimator.cpp  ad_hoc_ivn.cpp  ad_hoc_jlt.cpp  ad_hoc_pca.cpp  ad_hoc_superkmeans.cpp  ad_hoc_superkmeans_rabitq.cpp  ad_hoc_superkmeans_rabitq_gemm.cpp  ad_hoc_superkmeans_sq4.cpp  ad_hoc_superkmeans_sq8.cpp  bench_utils.h  bench_utils.py  cohere_bench_superkmeans.cpp  end_to_end_cuvs_kmeans_clustering.cpp  gpu_ad_hoc_superkmeans.cpp  gpu_faiss.cpp  varying_k_superkmeans.cpp
benchmarks/accelerators/: accelerators.cpp
benchmarks/end_to_end/: end_to_end_evoc.py  end_to_end_fast_kmeans.cpp  end_to_end_hierarchical.cpp  end_to_end_mlpack.py  end_to_end_pqkmeans.py  end_to_end_superkmeans.cpp
benchmarks/gemm/binary/: numkong.cpp
benchmarks/gemm/f32/: blas.cpp  numkong.cpp  onednn.cpp  xnn.cpp
benchmarks/gemm/u8/: l2_numkong.cpp  numkong.cpp  onednn.cpp  xnn.cpp
benchmarks/results/: topk_distances_mxbai_f32.json  topk_distances_openai_f32.json
benchmarks/results/default/: accelerators_pca_f32.csv  accelerators_pca_sq4.csv  accelerators_raw_f32.csv  accelerators_raw_rabitq.csv  accelerators_raw_sq4.csv  accelerators_raw_sq8.csv  end_to_end.csv
benchmarks/results/graniterapids/: accelerators_jlt_f32.csv  accelerators_jlt_rabitq.csv  accelerators_pca_f32.csv  accelerators_pca_rabitq.csv  accelerators_raw_f32.csv  accelerators_raw_rabitq.csv  accelerators_raw_sq4.csv  accelerators_raw_sq8.csv  elkan.csv
docker/: Dockerfile.gpu  Makefile
dockerfiles/: Makefile
include/superkmeans/: common.h  hierarchical_superkmeans.h  superkmeans.h
include/superkmeans/distance_computers/: avx2_computers.h  avx512_computers.h  base_computers.h  batch_computers.h  matmul.h  neon_computers.h  scalar_computers.h
include/superkmeans/gpu/: gpu_batch_computers.h  kernels.cuh  superkmeans.h  utils.h
include/superkmeans/pdx/: layout.h  pdx_ivf.h  pdxearch.h
include/superkmeans/quantizers/: f32.h  quantizer.h  rabitq.h  rabitq.old.h  rabitq_gemm.h  rabitq_gemm.old.h  sq4.h  sq8.h
python/: README.md
python/bindings/: bindings.cpp
scripts/ci/: build_linux_deps.sh
src/gpu/: kernels.cu
tests/: CMakeLists.txt  test_assign.cpp  test_distance_computers.cpp  test_quantized.cpp  test_wcss.cpp
tests/fetchcontent_test/: main.cpp
